--- a/HarshProject/bin/src/main/resources/application.properties
+++ b/HarshProject/bin/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=HarshProject
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bootdb
+spring.datasource.url=jdbc:mysql://localhost:3306/harshdb
 spring.datasource.username=root
-spring.datasource.password=WJ28@krhps
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-server.port=8081
+server.port=8080
